--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "NODE_ENV=production ts-node --project tsconfig.server.json server/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "commit" : "npx git-cz"
+    "commit": "npx git-cz"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -21,6 +21,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "clsx": "^1.1.0",
     "commitizen": "^4.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "git-cz": "^4.3.1",
     "graphql": "^14.5.8",
